--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,16 @@ nav, nav ul{
     width: 100%;
     background-image: linear-gradient(to bottom, var(--color-text-contrast) ,rgba(0, 0, 0, 0) );
 }
-.calculadora{
+
+.escolha{
+    width: 100%;
+    height: 100px;
+    margin: 10px;
+    
+}
+
+
+.calculadora-normal{
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -42,16 +51,19 @@ nav, nav ul{
     height: 400px;
     background-color: rgb(156, 156, 156);
 }
-
+/* visor das duas calculadoras */
 .tela{
-    width: 90%;
-    height: 50px;
-    background-color: white;
+    display: flex;
+    justify-content: end;
 }
-
-.calculadora .botao{
+/* formato e estilo dos botões da calculadora normal */
+.calculadora-normal .botao{
     margin: 10px;
     color: black;
     width: 50px;
     height: 50px;
+}
+/* tirar itens */
+.hide{
+    display: none;
 }
