--- a/src/geral/gerador de personagens/style.css
+++ b/src/geral/gerador de personagens/style.css
@@ -6,16 +6,58 @@
 }
 
 .personagens .container{
-    padding: 100px ;
+    padding: 50px ;
+    position: relative;
     border: 1px solid black;
+    justify-content: center;
     max-width: 370px;
+    max-height: 370px;
     background-color: rgba(82, 91, 96, 0.1);
-    
+    overflow: hidden;
+    transition: 1s;
 }
+.personagens .container.ativo{
+    max-height: 10000px;
+}
+
+.personagens .container-depth{
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 50px;
+    background-image: linear-gradient(to top, rgb(20, 20, 20), rgb(38, 38, 38) 20%, rgba(255, 255, 255, 0));
+}
+
 .personagens.text { 
     align-self: flex-start;
 }
 .personagens img{
+    margin: 0 auto;
     width: 200px;
     margin-bottom: 20px;
+    transition: width 0.3s;
+}
+.personagens img.ativo{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    z-index: 1;
+}
+.personagens .seta{
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    font-size: 20px;
+    cursor: pointer;
+
+}
+.seta-svg{
+    transition: transform 0.3s ease;
+    transform-origin: center;
+}
+.seta-svg.ativo {
+  transform: rotate(180deg);
 }
